[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/apps/news/NewsApp.gd" id="1"]

[node name="News" type="Window"]
initial_position = Vector2i(720, 160)
size = Vector2i(580, 520)
script = ExtResource("1")

[node name="Content" type="VBoxContainer" parent="News"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
custom_constants/separation = 12

[node name="HeadlineList" type="ItemList" parent="News/Content"]
size_flags_vertical = 3

[node name="HeadlineTitle" type="Label" parent="News/Content"]
text = "Select a headline"
add_theme_font_size_override("font_size", 20)

[node name="HeadlineLead" type="Label" parent="News/Content"]
autowrap_mode = 3
size_flags_vertical = 1

[node name="FramingOptions" type="VBoxContainer" parent="News/Content"]
size_flags_vertical = 2
custom_constants/separation = 8

